--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.sidebar-height {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
+}
+.sidebar-border-right {
+  /* border-right: 2px solid #3f51b5; */
+  box-shadow: 0 0 0.3cm rgba(0, 0, 0, 0.3);
+}
+body {
+  /* background: rgb(204, 204, 204) !important; */
+}
+.page[size="A4"] {
+  background: white;
+  width: 21cm;
+  height: 29.7cm;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 0.5cm;
+  box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media print {
+  @page {
+    margin: 0;
   }
-  to {
-    transform: rotate(360deg);
+  body * {
+    visibility: hidden;
+  }
+  .page * {
+    visibility: visible;
+  }
+  .page {
+    position: fixed;
+    left: 10px;
   }
 }
